# reBot-DevArm

./: IK_MOTION.md  README copy.md  build_furniture_demo.py  compute_grid.py  cv_test.py  furniture_recipes.yaml  goto_grid.py  grid_config.yaml  grid_gui.py  grid_occupancy.json  gripper_test.py  move_recorded_positions_direct.py  move_recorded_positions_ik.py  move_repl.py  move_repl_ik.py  move_repl_xy.py  move_robot_real.py  positions.yaml  reachy_emote.py  reachy_say_hi.py  realtime_positions.yaml  realtime_voice_move_object.py  record_arm_positions.py  record_replay.py  record_teleop.sh  recorded_arm_positions.yaml  release_arm.py  replay_arm_positions.py  replay_teleop.sh  run_text_agent.py  run_voice_agent.py  run_voice_agent_reachy.py  teleop.py  test_gripper.py  visualize_positions.html  workspace_grid.json
perception_pipeline/: README.md  pyproject.toml
perception_pipeline/cad_library/: manifest.yaml
perception_pipeline/cad_library/meshes/: README.md
perception_pipeline/calibration/: hand_eye_top.py  hand_eye_wrist.py  intrinsics.py  validate_extrinsics.py
perception_pipeline/configs/: default.yaml  extrinsics.yaml
perception_pipeline/pose_pipeline/: __init__.py  cad.py  depth.py  foundation_pose.py  frames.py  fusion.py  grounding.py  pose_estimator.py  types.py
perception_pipeline/scripts/: live_yolo.py  perception_demo.py  run_estimate.py  visualize.py
perception_pipeline/tests/: test_frames.py  test_fusion.py
pick_and_place_orchestration/: README.md  pyproject.toml
pick_and_place_orchestration/examples/: calibration_loop_skeleton.py
pick_and_place_orchestration/src/rebot_pick_place/: __init__.py  constants.py  gripper.py  kinematics.py  planner.py  skill.py  types.py
rebot_b601_sim/: README.md  pyproject.toml
rebot_b601_sim/assets/: cube_10cm.stl
rebot_b601_sim/configs/: robot_sim.json  workcell_two_cubes.json
rebot_b601_sim/scripts/: leader_to_mujoco.py  leader_to_sim.py  move_robot.py  mujoco_sim.py  setup_simulation.py  sim_robot.py
rebot_b601_sim/src/rebot_b601_sim/: __init__.py  joints.py  leader.py  leader_to_mujoco.py  (+10 more)
(+40 files in other folders)
